--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,20 @@ button {
     color: rgb(255, 255, 255);
     border: 0px;
     border-radius: 4px;
-    margin: 6px;
-    padding: 4px;
+    margin: 2px;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    width: 72px;
 }
 
 .clear {
     display: block;
     font-size: 18px;
     font-weight: 800;
+}
+
+.button-container {
+    width: 290px;
+    flex-wrap: wrap;
 }
