--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,12 @@ button {
     width: 290px;
     flex-wrap: wrap;
 }
+
+#display {
+    width: 300px;
+    height: 90px;
+    background-color: rgb(115, 182, 115);
+    font-size: 24px;
+    font-weight: 800;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
