Add body styles

--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,10 @@ button {
     font-weight: 800;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
