Fix typo in button container

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ button {
 .button-container {
     width: 290px;
     flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
 }
 
 #display {
