--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ button {
 }
 
 .clear {
-    display: block;
+    /*display: block;*/
     font-size: 18px;
     font-weight: 800;
     margin-right: auto;
@@ -54,4 +54,9 @@ body {
 
 .left-margin {
     margin-left: 10px;
+}
+
+.floating-point {
+    
+    justify-content: center;
 }
