--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,7 @@ body {
     background-color: rgb(255, 0, 0);
     box-shadow: 10px 4px 3px rgb(139, 0, 0);
 }
+
+.equals:hover {
+    background-color: rgb(0, 255, 0);
+}
