--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,10 @@ body {
 .equals:hover {
     background-color: rgb(0, 255, 0);
 }
+
+.operator:hover {
+    font-size: 28px;
+    color: black;
+    background-color: rgb(0, 43, 122);
+    box-shadow: 5px 5px 5px 5px rgb(0, 44, 100);
+}
