Change background color of the display, calculator and buttons

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 #calculator {
     border: 10px black solid;
-    background-color: rgb(195, 255, 255);
+    background-color:  #0E0B16;
     border-radius: 12px;
     
 }
 
 button {
-    background-color: rgb(67, 202, 255);
+    background-color: #4717F6;
     color: rgb(255, 255, 255);
     border: 0px;
     border-radius: 4px;
@@ -35,7 +35,7 @@ button {
 #display {
     width: 300px;
     height: 90px;
-    background-color: rgb(115, 182, 115);
+    background-color: rgb(15, 28, 49);
     font-size: 24px;
     font-weight: 800;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
